<resources>
    <string name="app_name">Think-It Star Wars</string>
    <string name="release_date">Release date</string>
    <string name="producer">Producer</string>
    <string name="director">Director</string>
    <string name="opening_craw">Opening craw</string>
    <string name="created">Created</string>
    <string name="edited">Edited</string>
    <string name="back">back</string>
    <string name="no_films_to_display">No Films to display</string>
</resources>