<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="io.thinkit.starwarsapp.viewmodel.FilmViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:background="@color/background_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/directorGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.25"
            android:orientation="vertical" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/producerGl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="23dp"
            android:text="@{viewModel.film.title}"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ReleaseDatelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="39dp"
            android:text="Release date"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/ReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="2dp"
            android:text="@{viewModel.film.release_date.toString()}"
            android:textSize="@dimen/content_text_size"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ReleaseDatelabel" />

        <TextView
            android:id="@+id/directorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:text="@string/director"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/directorGL"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="2dp"
            android:text="@{viewModel.film.director}"
            android:textSize="@dimen/content_text_size"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/directorGL"
            app:layout_constraintTop_toBottomOf="@+id/directorLabel" />

        <TextView
            android:id="@+id/producerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:text="@string/producer"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/producerGl"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/producer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.film.producer}"
            android:layout_marginTop="2dp"
            android:textSize="@dimen/content_text_size"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/producerGl"
            app:layout_constraintTop_toBottomOf="@+id/producerLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/opening_crawLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:text="@string/opening_craw"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />

    <TextView
        android:id="@+id/opening_craw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:text="@{viewModel.film.opening_crawl}"
        android:textSize="@dimen/description_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opening_crawLabel" />
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="@{safeUnbox(viewModel.dataLoading) ? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="No Films to display"
        android:textSize="18sp"
        android:visibility="@{safeUnbox(viewModel.empty) ? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:text="@string/created"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opening_craw" />

    <TextView
        android:id="@+id/created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@{viewModel.film.created}"
        android:layout_marginStart="14dp"
        android:textSize="@dimen/description_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createdLabel" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/editedGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.22"
        android:orientation="vertical" />
    <TextView
        android:id="@+id/editedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/edited"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintStart_toEndOf="@+id/editedGL"
        app:layout_constraintTop_toBottomOf="@+id/opening_craw" />

    <TextView
        android:id="@+id/edited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.film.edited}"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/description_text_size"
        app:layout_constraintStart_toEndOf="@+id/editedGL"
        app:layout_constraintTop_toBottomOf="@+id/editedLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>