<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="itemData"
            type="io.thinkit.starwarsapp.model.Film" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_list">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/RDGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.75"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="23dp"
            android:text="@{itemData.title}"
            android:textStyle="bold"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/archivovfbeta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ReleaseDatelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintStart_toStartOf="@+id/RDGuideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{itemData.release_date.toString()}"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/content_text_size"
            app:layout_constraintStart_toStartOf="@+id/RDGuideline"
            app:layout_constraintTop_toBottomOf="@+id/ReleaseDatelabel"
             />

        <TextView
            android:id="@+id/directorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:text="@string/director"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toTopOf="@+id/director"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />



        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{itemData.director}"
            android:layout_marginTop="13dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/content_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/directorLabel"/>

        <TextView
            android:id="@+id/opening_crawl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{itemData.opening_crawl}"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="21dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/content_text_size"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/director" />

        <TextView
            android:id="@+id/producorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/producer"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintStart_toEndOf="@+id/directorLabel"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/producer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{itemData.producer}"
            android:layout_marginTop="13dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/content_text_size"
            app:layout_constraintStart_toEndOf="@+id/director"
            app:layout_constraintTop_toBottomOf="@+id/producorLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>